fix overflow of tags

--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -106,7 +106,7 @@
 
   .index-photo-tag-container {
     h3 {
-      margin: 0;
+      margin: 0px 10px 10px 0px;
       font-weight: 600;
       font-size: 15px;
       float: left;
@@ -114,7 +114,6 @@
     .index-photo-tags {
       display: block;;
       max-width: 90%;
-      margin-left: 50px;
 
       a {
         display: inline-block;
